--- a/packages/common-i18n/src/locales/en/common.json
+++ b/packages/common-i18n/src/locales/en/common.json
@@ -20,8 +20,7 @@
     "editSucceed": "Edit Succeed!",
     "updateSucceed": "Update Succeed!",
     "deleteSucceed": "Delete Succeed!",
-    "loading": "Loading...",
-    "loadMore": "Load more"
+    "loading": "Loading..."
   },
   "settings": {
     "title": "Settings",
